--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
   <body>
     <div class="main">
       <div class="box">
+        <a href="https://app.boom.dev/" target="_blank" alt="boomdevapp">
+          Click here for boom dev app!</a
+        >
         <!-- https://app.boom.dev/ -->
         <!-- Open Boom in a new tab -->
         <img
